# weight_server

./: .gitignore  Cargo.toml  README.md  pyproject.toml
migrations/2023-04-07-134749_first/: down.sql  up.sql
migrations/2023-04-08-042527_add_device_id_column/: down.sql  up.sql
migrations/2023-04-08-042940_create_device_table/: up.sql
src/: constants.rs  main.rs  schema.rs  store.rs
src/utils/: db.rs  errors.rs  mod.rs  state.rs
