[package]
name = "weight_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="4"
serde = {version="1.0",features=["derive"]}
chrono = { version = "0.4", features = ["serde"] }
serde_yaml="0.9"
diesel={version="1.4.4",features=["mysql","r2d2","chrono"]}
dotenv="0.15.0"
env_logger = "0.9.0"
r2d2 = "0.8.10"
thiserror = "1.0.31"
serde_json = "1.0.82"
strum="0.24"