[tool.poetry]
name = "weight-server"
version = "0.1.0"
description = ""
authors = ["tetsu-sh <tetsusinmyou@yahoo.co.jp>"]
readme = "README.md"
packages = [{include = "weight_server"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
